<resources>
    <string name="app_name">HousePricePredictionApp</string>
    <string name="house_features_selection">House Features Selection</string>
    <string name="fill_in_the_house_features_you_d_like_to_have">Fill in the house features you\'d like to have</string>
    <string name="buy_or_sell">Choose whether you want to buy or sell a property</string>
    <string name="location_area">State</string>
    <string name="property_type">Property Type</string>
    <string name="property_size">Property Size</string>
    <string name="number_of_bedroom">Number of Bedroom</string>
    <string name="number_of_bathroom">Number of Bathroom</string>
    <string name="parking_lot">Parking Lot</string>
    <string name="floor_range">Floor Range</string>
    <string name="age_of_unit">Age of Unit</string>
    <string name="tenure_type">Tenure Type</string>
    <string name="land_title">Land Title</string>
    <string name="developer_">Developer</string>
    <string name="proceed">Proceed</string>
    <string name="facilities">Facilities</string>
    <string name="nearby_facilities">Nearby Facilities</string>
    <string name="gymnasium">🏋️ Gymnasium</string>
    <string name="swimming_pool">🏊 Swimming Pool</string>
    <string name="jogging_track">🏃‍♂️ Jogging Track</string>
    <string name="playground">🛝 Playground</string>
    <string name="security">👮 Security</string>
    <string name="minimart">🛒 Minimart</string>
    <string name="multipurpose_hall">🏟️ Multipurpose Hall</string>
    <string name="sauna">🧖 Sauna</string>
    <string name="clubhouse">🌊 Club house</string>
    <string name="barbeque_area">🥩 Barbeque Area</string>
    <string name="railway_station">🚆 Railway Station</string>
    <string name="bus_stop">🚍 Bus Stop</string>
    <string name="highway">🚘 Highway</string>
    <string name="mall">🛍️ Mall</string>
    <string name="school">🏫 School</string>
    <string name="hospital">🏥 Hospital</string>
    <string name="park">🏞️ Park</string>
    <string name="we_are_currently_evaluating_the_predicted_evaluation_price_with_your_feature_selection">We are currently evaluating the predicted evaluation price with your feature selection</string>
    <string name="predicted_evaluation_price">Predicted Evaluation Price</string>
    <string name="the_predicted_price_for_your_unit_with_the_feature_selection_is">The predicted price for your unit with the feature selection is</string>
    <string name="ringgit">RM</string>
    <string name="or">OR</string>

    <string name="price">340 000</string>
    <string name="locationArea">Setapak, Kuala Lumpur</string>
    <string name="propertyType">Service Residence</string>
    <string name="propertySize">1000 sq.ft.</string>
    <string name="numberOfBedroom">4</string>
    <string name="numberOfBathroom">2</string>
    <string name="parkingLot">2</string>
    <string name="floorRange">Medium (11-20)</string>


    <string name="ageOfUnit">15 years</string>
    <string name="tenureType">Freehold</string>
    <string name="landTitle">Residential</string>
    <string name="developer">Kenwingston Group</string>
    <string name="footer">The price evaluation estimation is generated by AI/ML Model</string>
    <string name="back">Back</string>
    <string name="share">Share</string>

    <string name="noOfBedroom">Bedroom</string>
    <string name="noOfBathroom">Bathroom</string>
    <string name="noOfparking">Parking</string>
    <string name="buy">Buy</string>
    <string name="sell">Sell</string>
    <string name="floor_level">Floor Level</string>
    <string name="in_years">in Years</string>


    <string-array name="location_area_array">
        <item>Johor</item>
        <item>Kedah</item>
        <item>Kelantan</item>
        <item>Kuala Lumpur</item>
        <item>Labuan</item>
        <item>Melaka</item>
        <item>Negeri Sembilan</item>
        <item>Pahang</item>
        <item>Penang</item>
        <item>Perak</item>
        <item>Putrajaya</item>
        <item>Sabah</item>
        <item>Sarawak</item>
        <item>Selangor</item>
        <item>Terengganu</item>

    </string-array>

    <string-array name="property_type_array">
        <item>Apartment</item>
        <item>Condominium</item>
        <item>Duplex</item>
        <item>Flat</item>
        <item>Service Residence</item>
        <item>Studio</item>
        <item>Townhouse Condo</item>

    </string-array>

    <string-array name="property_size_array">
        <item>300 – 500 sq.ft.</item>
        <item>500 – 700 sq.ft.</item>
        <item>700 – 900 sq.ft.</item>
        <item>900 – 1100 sq.ft.</item>
        <item>1100 – 1300 sq.ft.</item>
        <item>1300 – 1500 sq.ft.</item>
        <item>1500 – 1700 sq.ft.</item>
    </string-array>

    <string-array name="number_of_bedroom_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string-array name="number_of_bathroom_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string-array name="parking_lot_array">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

    <string-array name="floor_range_array">
        <item>High (21–30)</item>
        <item>Low (1–10)</item>
        <item>Medium (11–20)</item>

    </string-array>

    <string-array name="age_of_unit_array">
        <item>7 – 9 years</item>
        <item>10 – 13 years</item>
        <item>14 – 16 years</item>
    </string-array>

    <string-array name="tenure_type_array">
        <item>Freehold</item>
        <item>Leasehold</item>
    </string-array>

    <string-array name="land_title_array">
        <item>Bumi Lot</item>
        <item>Non Bumi Lot</item>

    </string-array>


</resources>