<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Result"
    android:paddingTop="16dp"
    android:paddingHorizontal="16dp"
    >

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/shareButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linear1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/backButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="8dp"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/predicted_evaluation_price"
            android:textAlignment="textStart"
            android:fontFamily="@font/manrope_bold"
            android:textSize="24sp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/the_predicted_price_for_your_unit_with_the_feature_selection_is"
            android:textAlignment="textStart"
            android:fontFamily="@font/manrope_semibold"
            android:textSize="16sp"
            android:textColor="@color/grey_medium"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/price"
            android:textAlignment="center"
            android:textSize="32sp"
            android:fontFamily="@font/manrope_bold"
            android:layout_marginTop="8dp"
            android:textColor="@color/white"
            android:background="@color/red_primary"
            android:paddingVertical="8dp"
            android:paddingHorizontal="16dp"
            android:layout_gravity="center"
            />

        <LinearLayout
            android:id="@+id/locationAreaContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="8dp"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/location_area"
                android:textAlignment="textStart"
                android:textSize="16sp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/locationArea"
                android:textAlignment="textStart"
                android:textSize="16sp"
                android:fontFamily="@font/manrope_medium"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="fill_horizontal"
            >

            <LinearLayout
                android:id="@+id/propertyTypeContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/property_type"
                    android:textAlignment="textStart"
                    android:textSize="16sp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/propertyType"
                    android:textAlignment="textStart"
                    android:textSize="16sp"
                    android:fontFamily="@font/manrope_medium"
                    />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/propertySizeContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_weight="1"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/property_size"
                    android:textAlignment="textStart"
                    android:textSize="16sp"
                    />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/propertySize"
                    android:textAlignment="textStart"
                    android:textSize="16sp"
                    android:fontFamily="@font/manrope_medium"
                    />

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="fill_horizontal"
            >


        </LinearLayout>



        <LinearLayout
            android:id="@+id/numberOfBedroomContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/noOfBedroom"
                android:textAlignment="textStart"
                android:textSize="16sp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/numberOfBedroom"
                android:textAlignment="textStart"
                android:textSize="16sp"
                android:fontFamily="@font/manrope_medium"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/numberOfBathroomContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/noOfBathroom"
                android:textAlignment="textStart"
                android:textSize="16sp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/numberOfBathroom"
                android:textAlignment="textStart"
                android:textSize="16sp"
                android:fontFamily="@font/manrope_medium"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/parkingLotContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/noOfparking"
                android:textAlignment="textStart"
                android:textSize="16sp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/parkingLot"
                android:textAlignment="textStart"
                android:textSize="16sp"
                android:fontFamily="@font/manrope_medium"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/floorRangeContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/floor_range"
                android:textAlignment="textStart"
                android:textSize="16sp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/floorRange"
                android:textAlignment="textStart"
                android:textSize="16sp"
                android:fontFamily="@font/manrope_medium"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/facilitiesContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/facilities"
                android:textAlignment="textStart"
                android:textSize="16sp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/numberOfBedroom"
                android:textAlignment="textStart"
                android:textSize="16sp"
                android:fontFamily="@font/manrope_medium"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/nearbyFacilitiesContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nearby_facilities"
                android:textAlignment="textStart"
                android:textSize="16sp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/numberOfBedroom"
                android:textAlignment="textStart"
                android:textSize="16sp"
                android:fontFamily="@font/manrope_medium"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ageOfUnitContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/age_of_unit"
                android:textAlignment="textStart"
                android:textSize="16sp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ageOfUnit"
                android:textAlignment="textStart"
                android:textSize="16sp"
                android:fontFamily="@font/manrope_medium"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/tenureTypeContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tenure_type"
                android:textAlignment="textStart"
                android:textSize="16sp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tenureType"
                android:textAlignment="textStart"
                android:textSize="16sp"
                android:fontFamily="@font/manrope_medium"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/landTitleContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/land_title"
                android:textAlignment="textStart"
                android:textSize="16sp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/landTitle"
                android:textAlignment="textStart"
                android:textSize="16sp"
                android:fontFamily="@font/manrope_medium"
                />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/developerContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/developer_"
                android:textAlignment="textStart"
                android:textSize="16sp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/developer"
                android:textAlignment="textStart"
                android:textSize="16sp"
                android:fontFamily="@font/manrope_medium"
                />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/footer"
            android:textAlignment="center"
            android:textSize="12sp"/>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>