<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:paddingTop="16dp"
    android:paddingHorizontal="16dp"
    >

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textAlignment="textStart"
        android:fontFamily="@font/manrope_bold"
        android:textSize="24sp"
        android:textColor="@color/red_primary"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/subtitleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/buy_or_sell"
        android:textAlignment="textStart"
        android:fontFamily="@font/manrope_semibold"
        android:textSize="16sp"
        android:textColor="@color/grey_medium"
        app:layout_constraintTop_toBottomOf="@id/titleTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        />

    <Button
        android:id="@+id/buyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buy"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/sellButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingHorizontal="128dp"
        android:paddingVertical="24dp"
        android:textSize="32sp"
        android:fontFamily="@font/manrope_bold"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/or"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@id/buyButton"
        app:layout_constraintBottom_toTopOf="@id/sellButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:fontFamily="@font/manrope_regular"
        android:textSize="32sp"
        android:textColor="@color/grey_medium"
        />


    <Button
        android:id="@+id/sellButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sell"
        app:layout_constraintTop_toBottomOf="@id/buyButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:paddingHorizontal="128dp"
        android:paddingVertical="24dp"
        android:textSize="32sp"
        android:fontFamily="@font/manrope_bold"
        />

</androidx.constraintlayout.widget.ConstraintLayout>
